--- a/Articles/SFC/Conclusion.org
+++ b/Articles/SFC/Conclusion.org
@@ -20,7 +20,7 @@ Although counterintuitive, this occurs because firms react to the discrepancies 
 In other words, for capacity utilization converges to the normal one,  firms' investment needs to grow temporarily faster than residential investment, changing the ratio between houses and total capital stock in the long-run.
 
 Future research should increase the complexity of this model in order to understand other consequences of residential investment.
-Some extensions could be exploring other determinants of its growth rate and  its effects on banks' net financial wealth.
+Some extensions could explore other determinants of its growth rate and  its effects on banks' net financial wealth.
 This emerging ``housing agenda'' should also moves towards institutional grounds.
 For example, future research could assess which institutional arrangements allow/inhibit the connection between house bubble, credit granting/rationing and financial instability.
 Nevertheless, this is a little step in a wider research agenda on the role of residential investment for economic growth and business cycles.
