--- a/Articles/SFC/Introduction.org
+++ b/Articles/SFC/Introduction.org
@@ -11,7 +11,7 @@ Despite its absence in theoretical models, there is a growing empirical literatu
 Sraffian supermultiplier growth model (SSM) establishes an important role to non-capacity creating (NCC) autonomous expenditures such
 as residential investment.
 textcite:serrano_long_1995,serrano_sraffian_2017 present a simple version of the SSM model to highlight it as an alternative closure for heterodox growth theory.
-More recently, textcites:allain_tackling_2015,lavoie_post-keynesian_2015,lavoie_convergence_2016 have introduced SSM to a broader Post-Keynesian audience.
+More recently, departing from neo-Kaleckian framework, textcites:allain_tackling_2015,lavoie_post-keynesian_2015,lavoie_convergence_2016 have reached similar results to SSM model. 
 
 Different NCC autonomous expenditures have been included in this framework. 
 For instance, some scholars have investigated the macroeconomic implications of both debt-financed cites:pariboni_autonomous_2015,fagundes_role_2017,mandarino-2020-worker-debt and financial wealth-financed consumption cite:brochier_supermultiplier_2018.
@@ -31,7 +31,7 @@ Section ref:sec:Model presents a SSM-SFC model  with asset bubbles and two real 
 Section ref:sec:runs evaluates short- and long-run equilibria as well as traverse in order to assess the consequences  of the inclusion of residential investment to the output level, growth rate and to stock-flow ratios.
 Next, Section ref:sec:Experiments evaluates this relations through numerical simulations.
 Inspired by the U.S. 2000s housing bubble episode, the experiments are: decrease in wage-share (Section ref:sec:Exp1); increase in real estate inflation (Section ref:sec:Exp2); and an increase in interest rate (Section ref:sec:Exp3).
-In this same Section, we also plug houses own rate of interest observed data for the U.S. (from 1992 to 2019) in order to compare simulations' results with the stylized facts presented previously.
+In this same Section, we also plug houses own rate of interest observed data for the U.S. (from 1992 to 2019) into our model in order to compare simulations' results with the stylized facts presented previously.
 Section ref:sec:Conclusion offers some concluding remarks while Appendix ref:append:Data provides simulation's parameters and baseline values and Appendix ref:append:Sensib presents a preliminary sensibility analysis.
 
 #+BEGIN_COMMENT
